--- a/src/palette.scss
+++ b/src/palette.scss
@@ -1,6 +1,8 @@
 $info: #0087c9;
 $attention: #ffb168;
 $fill: #d9d9d9;
+$divider: #e5e5e5;
 
 $textPrimary: #1b1b1b;
+$textWhite: #ffffff;
 $textSecondary: #535353;
