--- a/src/App/Main/Flight/flight.module.scss
+++ b/src/App/Main/Flight/flight.module.scss
@@ -1,18 +1,20 @@
 @import "../../../palette.scss";
 
-.flight {
+.flightCard {
+    margin-bottom: 28px;
   .top {
     display: flex;
+    align-items: center;
     justify-content: space-between;
     width: 100%;
-    height: 43px;
-    padding: 8px 16px 0;
+    height: 41px;
+    padding: 0 16px;
     background-color: $info;
-    margin-bottom: 4px;
-    .carier {
-      color: $textWhite;
-      font-size: 20px;
-      font-weight: 800;
+    .carrier {
+      width: 120px;
+      height: 27px;
+      object-fit: cover;
+      transform: translateY(2px);
     }
     .price {
       display: flex;
@@ -20,7 +22,16 @@
       align-items: flex-end;
       color: $textWhite;
       .amount {
-        font-size: 16px;
+        display: flex;
+        align-items: center;
+        & > h3 {
+          font-size: 18px;
+          font-weight: 400;
+        }
+        & > img {
+          margin-left: 7px;
+          height: 14px;
+        }
       }
       .comment {
         font-size: 9px;
@@ -29,14 +40,15 @@
   }
   .body {
     .flight {
+      border-top: 2px solid $info;
       width: 100%;
       .legs {
-        height: 38px;
+        height: 43px;
         display: flex;
         align-items: center;
-        padding: 0 20px;
+        margin: 0 20px;
         border-bottom: 1px solid $divider;
-        margin-bottom: 15px;
+        margin-bottom: 12px;
         .city {
           display: flex;
           align-items: center;
@@ -54,29 +66,72 @@
         }
       }
       .time {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
         padding: 0 55px 0 20px;
-        margin-bottom: 13px;
-        .departs,
-        .inflight,
-        .arrives {
+        margin-bottom: 10px;
+        .timeline {
           display: flex;
           align-items: center;
-          & > h3 {
-            font-weight: 400;
+          justify-content: space-between;
+          margin-bottom: 4px;
+          .departs,
+          .inflight,
+          .arrives {
+            display: flex;
+            align-items: center;
+            & > h3 {
+              font-weight: 400;
+            }
+            & > p {
+              margin: 0 7px;
+              color: $info;
+            }
+            & > img {
+              margin: 0 7px;
+            }
+          }
+        }
+        .transit {
+          display: flex;
+          justify-content: center;
+          position: relative;
+          .line {
+            position: absolute;
+            top: 50%;
+            display: block;
+            height: 1px;
+            width: 100%;
+            background-color: $divider;
+            z-index: -1;
           }
           & > p {
-            margin: 0 7px;
-            color: $info;
+            background-color: $textWhite;
+            color: $attention;
+            padding: 0 10px;
+            transform: translateX(8px);
           }
         }
       }
       .info {
+        margin: 0 20px 13px 20px;
       }
     }
   }
   .submit {
+    border: none;
+    width: 100%;
+    height: 40px;
+    background-color: $attention;
+    font-size: 16px;
+    font-weight: 500;
+    color: $textWhite;
+    outline: none;
+    transition: 0.075s linear;
+    cursor: pointer;
+    &:hover {
+      background-color: $attentionHover;
+    }
+    &:active {
+      background-color: $attention;
+    }
   }
 }
