--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,12 @@
   box-sizing: border-box;
 }
 
+h1,
+h2,
+h3 {
+  margin: 0;
+}
+
 body {
   font-family: "Inter", sans-serif;
   color: $textPrimary;
