--- a/src/App/Main/main.module.scss
+++ b/src/App/Main/main.module.scss
@@ -3,5 +3,29 @@
 .main {
   width: 100%;
   padding: 20px 45px 20px 23px;
-//   background-color: yellowgreen;
+  //   background-color: yellowgreen;
+}
+.loadMore {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 31px;
+  .button {
+    width: 255px;
+    height: 100%;
+    border: 1px solid $textPrimary;
+    outline: none;
+    background-color: $divider;
+    font-family: "Inter", sans-serif;
+    color: $textPrimary;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
+    &:hover {
+      background-color: $fill;
+    }
+    &:active {
+      background-color: $divider;
+    }
+  }
 }
