--- a/src/App/Aside/aside.module.scss
+++ b/src/App/Aside/aside.module.scss
@@ -1,8 +1,53 @@
 @import "../../palette.scss";
 
+@mixin input {
+  & > h3 {
+    margin: 18px 0;
+  }
+  .input {
+    display: flex;
+    flex-direction: column;
+    & > label {
+      & > input {
+        margin-right: 7px;
+      }
+    }
+    .textinput {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 17px;
+      & > p {
+        width: 23px;
+        flex-shrink: 0;
+      }
+      & > input {
+        width: 100%;
+      }
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
+}
+
 .aside {
   width: 256px;
-  height: 640px;
-  background-color: yellow;
+  height: fit-content;
+  background-color: $fill;
   flex-shrink: 0;
+  .filter {
+    width: 100%;
+    background-color: $textWhite;
+    margin: 36px 0;
+    padding: 18px 0 36px;
+    .sortBy {
+      padding: 0 20px;
+      margin-bottom: 44px;
+      @include input;
+    }
+    .filterBy {
+      padding: 0 20px;
+      @include input;
+    }
+  }
 }
