--- a/src/App/Main/main.module.scss
+++ b/src/App/Main/main.module.scss
@@ -1,5 +1,14 @@
 @import "../../palette.scss";
 
+@mixin button {
+  width: 255px;
+  height: 100%;
+  outline: none;
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+}
+
 .main {
   width: 100%;
   padding: 20px 45px 20px 23px;
@@ -16,15 +25,10 @@
   width: 100%;
   height: 31px;
   .button {
-    width: 255px;
-    height: 100%;
+    @include button;
     border: 1px solid $textPrimary;
-    outline: none;
     background-color: $divider;
-    font-family: "Inter", sans-serif;
     color: $textPrimary;
-    font-size: 16px;
-    font-weight: 500;
     cursor: pointer;
     &:hover {
       background-color: $fill;
@@ -32,5 +36,12 @@
     &:active {
       background-color: $divider;
     }
+  }
+  .buttonDis {
+    @include button;
+    color: $fill;
+    border: 1px solid $fill;
+    background-color: $divider;
+    cursor: default;
   }
 }
